[metadata]
name = LuminaDB_worker
version = attr: luminadb_worker.__version__
license_files = LICENSE
url = https://github.com/RimuEirnarn/luminadb
author = RimuEirnarn
author_email = rimuru720@proton.me
description = Worker thread extension for LuminaDB
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Source Code = https://github.com/RimuEirnarn/luminadb

[options]
packages = luminadb
python_require = >= 3.11
